--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,12 +31,12 @@ on:
     branches: ["master"]
 
 env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-  ECS_SERVICE: ${{ secrets.MY_ECS_SERVICE }}
-  ECS_CLUSTER: ${{ secrets.MY_ECS_CLUSTER }}
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION
-  CONTAINER_NAME: MY_CONTAINER_NAME
+  AWS_REGION: eu-central-1
+  ECR_REPOSITORY: gisture
+  ECS_SERVICE: gisture-service
+  ECS_CLUSTER: gisture-cluster
+  ECS_TASK_DEFINITION: .deployment/task-definition.json
+  CONTAINER_NAME: gisture-container
 
 permissions:
   contents: read
